--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<link
 			href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap"
-			rel="stylesheet"
-		/>
+			rel="stylesheet"/>
 		<link rel="stylesheet" href="style.css" />
 		<title>Responsive design test</title>
 	</head>
